# CODE_CYANEA

./: .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  desktop.ini  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  TESTING.md  alembic.ini  app.js  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_trips_table.py  0002_create_gastos_and_participantes_gastos_.py  0003_add_hashed_password_to_usuarios.py  0004_email_confirmado.py  0005_add_TipoDivision_and_MontoAsigando.py  0005_add_user_notification_preferences.py  0006_create_actividades.py  0006_create_dias_cronogramas_table.py  0007_merge_heads.py  0008_create_monedas.py  0009_add_fk_viajes_moneda.py  0010_create_destinos_and_viajes_destinos.py  0011_remove_destino_from_viajes_and_require_.py  0012_add_google_auth_fields_to_usuarios.py  0013_add_facebook_id_to_usuarios.py  0014_add_icono_to_actividades.py  7e0fdeb99a98_merge_heads.py  8382d38ddbfe_crear_votaciones_propuestas_y_votos.py  c77ea620d811_merge_heads.py  f2bda3d1364f_merge_heads.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  actividad_itinerario.py  categorias_gastos.py  destino.py  destino_viaje.py  dia_cronograma.py  estado_invitacion.py  estado_participacion.py  estado_viaje.py  gasto.py  moneda.py  (+9 more)
backend/scripts/: README.md  confirm_user.py  create_user.py  set_password.py
backend/tests/: conftest.py  test_auth.py  test_gastos.py  test_itinerary.py  test_monedas.py  test_trips.py  test_users.py  test_votaciones.py
(+126 files in other folders)
