[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyanea-api"
version = "0.1.0"
description = "FastAPI backend for Cyanea"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.1",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.3.4",
  "psycopg[binary]>=3.2.1",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.2",
  "ruff>=0.6.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

