[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyanea-api"
version = "0.1.0"
description = "FastAPI backend for Cyanea"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.1",
  "bcrypt>=4.0",
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "pydantic-settings>=2.3.4",
  "pydantic[email]>=2.0",
  "psycopg[binary]>=3.2.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6",
  "httpx",
  "pycountry"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]